fix(social-media-graphics): footer alignment

--- a/src/components/social-media-graphics/race/social-card.module.scss
+++ b/src/components/social-media-graphics/race/social-card.module.scss
@@ -148,7 +148,11 @@ body {
 .square {
   .footer {
     left: 38px;
-    width: 525px;
+    width: 625px;
+
+    .notes {
+      width: 500px;
+    }
   }
 }
 
